syntax = "proto2";

package spipe.pb;

message Propose {
	optional bytes rand = 1;
	optional bytes pubkey = 2;
	optional string exchanges = 3;
	optional string ciphers = 4;
	optional string hashes = 5;
}

message Exchange {
	optional bytes epubkey = 1;
	optional bytes signature = 2;
}

message NoiseHandshakePayload {
	optional bytes libp2p_key = 1;
	optional bytes noise_static_key_signature = 2;
    optional bytes libp2p_data = 3;
	optional bytes libp2p_data_signature = 4;
}